@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-haskell/monadcatchio-mtl/monadcatchio-mtl-0.3.0.5.ebuild,v 1.4 2013/09/03 08:38:25 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-haskell/monadcatchio-mtl/monadcatchio-mtl-0.3.0.5.ebuild,v 1.5 2013/09/04 09:01:40 ago Exp $
 
 EAPI=5
 
@@ -18,7 +18,7 @@ SRC_URI="mirror://hackage/packages/archive/${MY_PN}/${PV}/${MY_P}.tar.gz"
 
 LICENSE="BSD"
 SLOT="0/${PV}"
-KEYWORDS="alpha amd64 ~ppc ~sparc ~x86"
+KEYWORDS="alpha amd64 ppc ~sparc ~x86"
 IUSE=""
 
 RDEPEND="dev-haskell/extensible-exceptions:=[profile?]
