@@ -1,6 +1,10 @@
 # ChangeLog for dev-haskell/monadcatchio-mtl
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-haskell/monadcatchio-mtl/ChangeLog,v 1.7 2013/09/03 08:38:25 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-haskell/monadcatchio-mtl/ChangeLog,v 1.8 2013/09/04 09:01:40 ago Exp $
+
+  04 Sep 2013; Agostino Sarubbo <ago@gentoo.org>
+  monadcatchio-mtl-0.3.0.5.ebuild:
+  Stable for ppc, wrt bug #480558
 
   03 Sep 2013; Agostino Sarubbo <ago@gentoo.org>
   monadcatchio-mtl-0.3.0.5.ebuild:
